# bitcoin-basics

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ecc.cpp  ecc.h  hmac-sha256.c  hmac-sha256.h  op.h  script.cpp  script.h  sha256.c  tx.cpp  tx.h  utils.cpp  utils.h
01_finite-field/: Makefile  README.md  field-element.cpp  field-element.h  main  main.cpp
02_elliptic-curves/: main  main.cpp  point.h
03_elliptic-curve-cryptography/: Makefile  README.md  field-element-point.cpp  field-element-point.h  main  main.cpp  std.output
04_serialization/: Makefile  main.cpp  std.output
05_transactions/: Makefile  main.cpp  std.output
06_script/: Makefile  main.cpp  std.output
chapter-test/: CMakeLists.txt  Makefile  test_ch01.cpp  test_ch02.cpp  test_ch02.md  test_ch03.cpp  test_ch04.cpp  test_ch05.cpp  test_ch06.cpp
continuous-testing/: CMakeLists.txt  Makefile  aes.cpp  block-test-driver.py  main.cpp  script-test-driver.py  script-test.cpp  script-test.h  test-driver.py  tx-test-driver.py  tx-test.cpp
src/: ecc.cpp  ecc.h  op.cpp  op.h  script.cpp  script.h  tx.cpp  tx.h  utils.cpp  utils.h
src/chapter-test/: test_ch01.md
src/continuous-testing/: CMakeLists.txt  aes.cpp  requirements.txt  script-test-driver.py  script-test.cpp  script-test.h  tx-test.cpp
src/mybitcoin/: CMakeLists.txt  ecc.cpp  op.cpp  op.h  script.cpp  script.h  tx.cpp  tx.h  utils.cpp  utils.h
tests/afl++/inputs/: 01.case  02.case  03.case  04.case  05.case  06.case  07.case  08.case
